--- a/sass/application/_signup.scss
+++ b/sass/application/_signup.scss
@@ -36,6 +36,8 @@ a {text-decoration: none;}
       .header-block-background {
         margin-bottom: 0px;
         margin-left: 300px;
+        padding-bottom: 2em;
+
       
         ul {
           margin-bottom: 0;
