--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -17,9 +17,13 @@
 @import "marketing/homepage";
 @import "marketing/dropdown";
 
+
 //APPLICATION STYLES
 @import "application/signup";
 @import "application/showpage";
 @import "application/following";
 @import "application/frmanage";
 @import "application/editprofile";
+@import "application/qtrotator";
+@import "application/donation";
+@import "application/browse";
