--- a/sass/global/_base.scss
+++ b/sass/global/_base.scss
@@ -18,3 +18,12 @@ a{ text-decoration: none; }
   //margin: 1.3em 0 0 0;
   width: 100%; 
 }
+
+.user-image {
+	background:url(../images/usergeneric.png) no-repeat top center;
+    background-size:cover;
+    width:100%;
+    min-height:300px;
+    margin-top: 0;
+    margin-bottom: 2em;
+}
