--- a/sass/application/_browse.scss
+++ b/sass/application/_browse.scss
@@ -16,41 +16,99 @@
 
 .wrap { 
 	width: 100%;
-	margin: 0 auto; 
+
+	h4 {
+		background-color: rgba(204,10,50, 0.7);
+		color: #fff;
+		padding: 1em 0;
+		text-align: center;
+		margin-bottom: 0;
+		}
+	
  
 
-	.browse-header {  
-		font-size: 22px; 
+	.browse-header {   
 		text-align:left; 
-		margin-left: 30px;
 		color: $base-blue;
-	}
+		margin-left: 0;
+		
+		
+		.container {
+			.one-third {
+				.column {
+					width: 150px !important;
+					margin-left: 0;
 
-	.browse-body { 
-		overflow:auto;
-
-		.sidebar { 
-			float:left; 
-			
-			.category-list {
-				ul {
-					float: left;
-					margin-left: 15px;
 				}
 			}
-			
 		}
 
+			h5 {
+			color: $base-red;
+			padding-bottom: 1em;
+			}
 	}
-	.mainbar {
-		float: right;
 
-		.right-main-body {
+	
+
+
+	.browse-sidebar { 
+		background-color: #eeeeee;
+		width: 225px;
+		padding: 1em 1.5em 4em 2em;
+		margin: 0;
+		overflow:auto;
+		float: left;
+		display: block;
+
+
+			
+		.category-list {
 			ul {
-				float: right;
+				float: left;
+				font-size: 16px;
+				color: $base-blue;
+				display: block;
+			}
+		}
+			
+
+	}
+
+	.right-main-body {
+		//margin-left: -1px;
+
+		.fundraiser-list {
+			h5 {
+				padding: 0.5em 0 1em 0;
+				color: $base-red;
+				float: left;
+				margin-left: -10px;
+			}
+		}
+
+		.reddirtcd {
+			float: left;
+			color: $base-blue;
+			display: block;
+			margin-left: 75px;
+			
+			h6 {
+				color: $base-blue;
+			}
+
+			a {
+				color: $base-red;
+			}
+
+			.divider {
+				margin-bottom: 1em;
+				width: 500px;
 			}
 		}
 	}
 
+
+	
 	
 }
