--- a/sass/application/_qtrotator.scss
+++ b/sass/application/_qtrotator.scss
@@ -1,28 +1,25 @@
 .cbp-qtrotator {
     position: relative;
     margin: 3em auto 5em auto;
-    max-width: 800px;
-    width: 100%;
     min-height: 400px;
+    max-width: 920px;
 }
- 
+
 .cbp-qtrotator .cbp-qtcontent {
+    border-top: 1px solid darken($base-red, 5%);
     position: absolute;
     min-height: 200px;
-    border-top: 1px solid #f4f4f4;
-    border-bottom: 1px solid #f4f4f4;
     padding: 2em 0;
     top: 0;
     z-index: 0;
     opacity: 0;
     width: 100%;
 }
- 
+
 .no-js .cbp-qtrotator .cbp-qtcontent {
     border-bottom: none;
 }
- 
-/* Currently visible */
+
 .cbp-qtrotator .cbp-qtcontent.cbp-qtcurrent,
 .no-js .cbp-qtrotator .cbp-qtcontent {
     position: relative; 
@@ -30,60 +27,54 @@
     pointer-events: auto;
     opacity: 1;
 }
- 
+
 .cbp-qtrotator .cbp-qtcontent:before,
 .cbp-qtrotator .cbp-qtcontent:after {
     content: " ";
     display: table;
 }
- 
+
 .cbp-qtrotator .cbp-qtcontent:after {
     clear: both;
 }
- 
+
 .cbp-qtprogress {
+    left: 0;
     position: absolute;
-    background: #47a3da;
+    background: #FFF;
     height: 1px;
     width: 0%;
     top: 0;
     z-index: 1000;
 }
- 
+
 .cbp-qtrotator blockquote {
+    border-left: none;
     margin: 0;
     padding: 0;
 }
- 
+
 .cbp-qtrotator blockquote p {
     font-size: 2em;
-    color: #888;
+    color: #fff;
     font-weight: 300;
+    line-height: normal;
     margin: 0.4em 0 1em;
+    text-align: left;
 }
- 
+
 .cbp-qtrotator blockquote footer {
+    color: #FFF;
     font-size: 1.2em;
+    font-weight: 700;
+    text-align: left;
 }
- 
+
 .cbp-qtrotator blockquote footer:before {
-    content: '? ';
+    content: '― ';
 }
- 
+
 .cbp-qtrotator .cbp-qtcontent img {
     float: right;
     margin-left: 3em;
-}
- 
-/* Example for media query */
-@media screen and (max-width: 30.6em) { 
- 
-    .cbp-qtrotator {
-        font-size: 70%;
-    }
- 
-    .cbp-qtrotator img {
-        width: 80px;
-    }
- 
 }
