--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,9 +1,10 @@
+@charset "UTF-8";
 /* Welcome to Compass.
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,600);
-/* line 5, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,45 +26,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -1856,17 +1857,15 @@ a {
 .cbp-qtrotator {
   position: relative;
   margin: 3em auto 5em auto;
-  max-width: 800px;
-  width: 100%;
   min-height: 400px;
+  max-width: 920px;
 }
 
-/* line 9, ../sass/application/_qtrotator.scss */
+/* line 8, ../sass/application/_qtrotator.scss */
 .cbp-qtrotator .cbp-qtcontent {
+  border-top: 1px solid #b4092c;
   position: absolute;
   min-height: 200px;
-  border-top: 1px solid #f4f4f4;
-  border-bottom: 1px solid #f4f4f4;
   padding: 2em 0;
   top: 0;
   z-index: 0;
@@ -1874,13 +1873,12 @@ a {
   width: 100%;
 }
 
-/* line 21, ../sass/application/_qtrotator.scss */
+/* line 19, ../sass/application/_qtrotator.scss */
 .no-js .cbp-qtrotator .cbp-qtcontent {
   border-bottom: none;
 }
 
-/* Currently visible */
-/* line 26, ../sass/application/_qtrotator.scss */
+/* line 23, ../sass/application/_qtrotator.scss */
 .cbp-qtrotator .cbp-qtcontent.cbp-qtcurrent,
 .no-js .cbp-qtrotator .cbp-qtcontent {
   position: relative;
@@ -1889,70 +1887,65 @@ a {
   opacity: 1;
 }
 
-/* line 34, ../sass/application/_qtrotator.scss */
+/* line 31, ../sass/application/_qtrotator.scss */
 .cbp-qtrotator .cbp-qtcontent:before,
 .cbp-qtrotator .cbp-qtcontent:after {
   content: " ";
   display: table;
 }
 
-/* line 40, ../sass/application/_qtrotator.scss */
+/* line 37, ../sass/application/_qtrotator.scss */
 .cbp-qtrotator .cbp-qtcontent:after {
   clear: both;
 }
 
-/* line 44, ../sass/application/_qtrotator.scss */
+/* line 41, ../sass/application/_qtrotator.scss */
 .cbp-qtprogress {
+  left: 0;
   position: absolute;
-  background: #47a3da;
+  background: #FFF;
   height: 1px;
   width: 0%;
   top: 0;
   z-index: 1000;
 }
 
-/* line 53, ../sass/application/_qtrotator.scss */
+/* line 51, ../sass/application/_qtrotator.scss */
 .cbp-qtrotator blockquote {
+  border-left: none;
   margin: 0;
   padding: 0;
 }
 
-/* line 58, ../sass/application/_qtrotator.scss */
+/* line 57, ../sass/application/_qtrotator.scss */
 .cbp-qtrotator blockquote p {
   font-size: 2em;
-  color: #888;
+  color: #fff;
   font-weight: 300;
+  line-height: normal;
   margin: 0.4em 0 1em;
+  text-align: left;
 }
 
-/* line 65, ../sass/application/_qtrotator.scss */
+/* line 66, ../sass/application/_qtrotator.scss */
 .cbp-qtrotator blockquote footer {
+  color: #FFF;
   font-size: 1.2em;
-}
-
-/* line 69, ../sass/application/_qtrotator.scss */
-.cbp-qtrotator blockquote footer:before {
-  content: '? ';
+  font-weight: 700;
+  text-align: left;
 }
 
 /* line 73, ../sass/application/_qtrotator.scss */
+.cbp-qtrotator blockquote footer:before {
+  content: '― ';
+}
+
+/* line 77, ../sass/application/_qtrotator.scss */
 .cbp-qtrotator .cbp-qtcontent img {
   float: right;
   margin-left: 3em;
 }
 
-/* Example for media query */
-@media screen and (max-width: 30.6em) {
-  /* line 81, ../sass/application/_qtrotator.scss */
-  .cbp-qtrotator {
-    font-size: 70%;
-  }
-
-  /* line 85, ../sass/application/_qtrotator.scss */
-  .cbp-qtrotator img {
-    width: 80px;
-  }
-}
 /* line 1, ../sass/application/_donation.scss */
 .table {
   margin-right: -30px;
