--- a/sass/application/_browse.scss
+++ b/sass/application/_browse.scss
@@ -95,15 +95,17 @@
 			
 			h6 {
 				color: $base-blue;
+				padding-top: 1em;
 			}
 
 			a {
 				color: $base-red;
+				padding-top: 1em;
 			}
 
 			.divider {
 				margin-bottom: 1em;
-				width: 500px;
+				width: 600px;
 			}
 		}
 	}
