--- a/sass/application/_following.scss
+++ b/sass/application/_following.scss
@@ -1,51 +1,85 @@
-.following-page {
+.main-nav-header {
+	padding-top: 0 !important;
 
-	.main-nav-header {
-		padding-top: 0 !important;
-	}
 
-		.dropdown {
-			margin-top: 1.5em;
+	.dropdown {
+		margin-top: 1.5em;
 			
-			.account{
-				color: $base-blue;
-				font-size: 13px;
-				font-weight: 600;
-
-			}
-
-
-		}
-
-	.user-image {
-		img{
-			float: right;
-			margin-bottom: 2em;
+		.account{
+			color: $base-blue;
+			font-size: 13px;
+			font-weight: 600;
 		}
 	}
+}
 
-	.following-fundraisers {
+.user-image {
+	img{
+		float: right;
+	}
+}
 
-		h5 {
-			color: $light-blue;
+
+.body-container{ position: relative; }
+
+.following-list {
+	float: left;
+
+	.fundraiser-block {
+		img {
+			padding-top: 1em;
+			text-align: center;
 		}
-		a {
+
+		h6 {
 			color: $base-blue;
+			padding-top: 1.5em;
 		}
 
-		.divider {
-			padding-top: 0.5em;
-			padding-bottom: 1em;
-
-		}
-
-		.second-fundraiser {
-			img {
+			a {
+				color: $base-red;
 				padding-top: 1em;
 			}
-		}
-	}
 
-	
-	
-}
+		.divider {
+			margin-bottom: 1em;
+			width: 600px;
+			float: right;
+		}
+
+		
+	}
+}		
+
+.browse-more-sidebar { 
+	background-color: #eeeeee;
+	padding: 3em 3em 4em 2em;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	top: -20px;
+	margin-left: 0;
+	overflow:auto;
+	float: right;
+	display: block;
+
+	h6 {
+		color: $base-blue;
+		
+	}
+			
+		.category-list {
+			ul {
+				float: right;
+				font-size: 16px;
+				color: $base-blue;
+				display: block;
+
+				a {
+					color: $base-red;
+				}
+			}
+
+		}
+		
+	}
