--- a/sass/application/_showpage.scss
+++ b/sass/application/_showpage.scss
@@ -18,13 +18,44 @@
 		}
 
 	.showpage-image {
-		img{
-			float: right;
-		}
+		background:url(../images/fundraisercover.png) no-repeat top center;
+	    background-size:cover;
+	    width:100%;
+	    min-height:300px;
+	    margin-top: 0;
+	    margin-bottom: 2em;
+	
+		.user-profile{
+    		text-align: center;
+
+
+	    	.user-profile-block{
+	    		left: 30px;
+	    		position: absolute;
+	    		top: 60px;
+
+	    		h5 , h6 {
+		    		color: #fff;
+		    		font-weight: 700;
+			    }
+			   
+
+		    	.avatar{
+		    		border-radius: 100px;
+		    		height: 150px;
+		    		margin-bottom: 15px;
+		    		width: 150px;
+
+		    	}
+	    	}
+   		}
+
 	}
+
 
 	.about-fundraiser {
 		float: left;
+		margin-bottom: 1.5em;
 
 		h3 {
 			color: $base-blue;
@@ -34,14 +65,57 @@
 
 	.stats-fundraiser {
 		float: right;
+		text-align: center;
+		
 		h3, h4 {
 			color: $base-blue;
 		}
+		.button {
+			width: 300px;
+			
+			a {
+				display: block;
+
+			}
+				.icon {
+	                  fill: #fff;
+	                  display: inline;
+	                  width: 2rem;
+	                  height: 2rem;
+	                  margin: 0;
+	                  float: left;
+
+	                  .svg {
+	                    width: 2rem;
+	                    height: 2rem;
+	                    display: inline;
+	                    fill: #fff;
+	                    float: left;
+	                  }
+	                }
+        }
+
 	}
 
+	.supporter-header {
+		background-color: rgba(204,10,50, 0.7);
+		color: #fff;
+		font-size: 2em;
+		padding: 0.5em 0;
+		text-align: center;
+		margin-bottom: 0.5em;
+		margin-top: 1.5em;
+	}
+	
 	.supporters {
-		h3 {
+
+		h4 {
 			color: $base-blue;
 		}
 	}
+	
 }
+
+
+
+
